codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_success_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Used search.find_docs({"query":"ratatui styling","limit":3})
  └ Found styling guidance in styles.md
